# DiachronicVec

./: .gitignore  README.md  pyproject.toml  run.py
api/: main.py
api/routers/: analysis.py  corpus.py
corpus/ancient/: Aristotle_Categories.txt  Aristotle_Metaphysics.txt  Aristotle_Nicomachean_Ethics.txt  Aristotle_On_the_Soul_De_Anima.txt  Aristotle_Politics.txt  Aristotle_Rhetoric.txt  Aristotle_The_Poetics.txt  Cicero_On_Duties.txt  Cicero_Tusculan_Disputations.txt  Diogenes_Laertius_Lives_of_the_Eminent_Philosophers.txt  Epictetus_Discourses.txt  Epictetus_Enchiridion.txt  Heraclitus_Fragments.txt  Herodotus_The_Histories.txt  Lucretius_On_the_Nature_of_Things.txt  Marcus_Aurelius_Meditations.txt  Plato_Apology.txt  Plato_Phaedo.txt  Plato_Symposium.txt  Plato_The_Complete_Works.txt  Plato_The_Republic.txt  Plotinus_The_Enneads.txt  Plutarch_Lives_of_the_Noble_Grecians_and_Romans.txt  Seneca_Moral_Letters_to_Lucilius.txt  Sextus_Empiricus_Against_the_Mathematicians.txt  Thucydides_History_of_the_Peloponnesian_War.txt  Xenophon_Memorabilia.txt
corpus/contemporary/: IEP_Camus.txt  IEP_Existentialism.txt  IEP_Kripke.txt  IEP_Nozick.txt  IEP_Ordinary_Language_Philosophy.txt  IEP_Philosophy_of_Language.txt  IEP_Philosophy_of_Mind.txt  IEP_Post_structuralism.txt  (+35 more)
diachronic/: __init__.py  align.py  analyze.py  config.py  preprocess.py  train.py  utils.py
plans/: architecture.md
processed_corpus/: contemporary_sentences.json
scripts/: align_models.py  analyze_semantics.py  train_models.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
(+51 files in other folders)
