[project]
name = "diachronic-vec"
version = "1.0.0"
description = "Diachronic word vector analysis for Western philosophy texts"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3,<5",
    "numpy>=1.24,<2",
    "scipy>=1.11,<2",
    "spacy>=3.7,<4",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "scikit-learn>=1.4,<2",
    "pandas>=2.1,<3",
]

[tool.setuptools.packages.find]
include = ["diachronic*", "api*"]
